[tool.poetry]
name = "deep-nearest-neighbor"
version = "0.1.0"
description = ""
authors = ["jloveric <john.loverich@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.0"
pandas = "^1.5.3"
torchvision = "^0.14.1"
hydra-core = "^1.3.2"
matplotlib = "^3.7.0"
tqdm = "^4.65.0"
pillow = "^9.4.0"
language-interpolation = {git = "https://github.com/jloveric/language-interpolation.git"}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
